--- a/zatch.1.html
+++ b/zatch.1.html
@@ -58,6 +58,10 @@ The options are as follows:
       might have occurred in a subdirectory of the one that is echoed.</dd>
   <dt class="It-tag">&#x00A0;</dt>
   <dd class="It-tag">&#x00A0;</dd>
+  <dt class="It-tag"><a class="selflink" href="#V"><b class="Fl" title="Fl" id="V">-V</b></a></dt>
+  <dd class="It-tag">Print version and exit.</dd>
+  <dt class="It-tag">&#x00A0;</dt>
+  <dd class="It-tag">&#x00A0;</dd>
   <dt class="It-tag"><var class="Ar" title="Ar">dir</var></dt>
   <dd class="It-tag">One or more directories to watch.</dd>
 </dl>
